forgot to add "s"

--- a/programming/python/data-types.html
+++ b/programming/python/data-types.html
@@ -24,7 +24,7 @@ permalink: /programming/python/data-types/
 
 <section>
     <h2>Floats</h2>
-    <p>Floats are basically the same as integers and we can do the same things with them. The only difference is that floats are decimals. Floats are an abbreviation of floating point number.</p>
+    <p>Floats are basically the same as integers and we can do the same things with them. The only difference is that floats are decimals. Floats are an abbreviation of floating point numbers.</p>
 </section>
 
 <section>
