go data types: minor edit

--- a/programming/golang/data-types.html
+++ b/programming/golang/data-types.html
@@ -13,12 +13,12 @@ layout: golang
 
 <section>
     <h2>String</h2>
-    <p>A string is some text. If that's hard to remember, think of text as characters strung together on a string. In Go, strings are wrapped in double quotes.</p>
+    <p>A string is some text. If that's hard to remember, think of text as characters strung together on a string. In Go, strings are wrapped in double quotes. If we don't do that, Go will think that we are referring to a variable and we'll get an error.</p>
 </section>
 
 <section>
     <h2>Integer</h2>
-    <p>An integer is a whole number that can be positive or negative. In Go, we simply write out the number, no quotes or anything like that. To make it negative, just add a dash in front of it.</p>
+    <p>An integer is a whole number that can be positive or negative. In Go, we simply write out the number, no quotes or anything like that. To make it negative, just add a dash in front of it. We can do arithmetic with integers.</p>
 </section>
 
 <section>
@@ -28,5 +28,5 @@ layout: golang
 
 <section>
     <h2>Floats</h2>
-    <p>Floats are an abbreviation of floating point numbers. Floats are simply decimals. In Go, there are two types of floats, <code>float32</code> and <code>float64</code>. <code>float64</code> uses 64 bytes of memory, while <code>float32</code> only uses 32 bytes of memory. So, <code>float64</code> can store larger floats and floats with more decimals. However, <code>float64</code> uses more memory, so there is a tradeoff.</p>
+    <p>Floats are an abbreviation of floating point numbers and can do all of the same thing as integers. The only difference is that floats are decimals. In Go, there are two types of floats, <code>float32</code> and <code>float64</code>. <code>float64</code> uses 64 bytes of memory, while <code>float32</code> only uses 32 bytes of memory. So, <code>float64</code> can store larger floats and floats with more decimals. However, <code>float64</code> uses more memory, so there is a tradeoff.</p>
 </section>
