--- a/programming/golang/data-types.html
+++ b/programming/golang/data-types.html
@@ -23,7 +23,7 @@ layout: golang
 
 <section>
     <h2>Boolean</h2>
-    <p>Booleans are either true or false. Since computers are made from ones and zeroes, which are equivalent to true and false, you'd imagine booleans are pretty important. In Go, to make a variable true, we simply type <code>true</code>, all lowercase. Liekwise, we type <code>false</code> for false. Booleans are named after the English mathematician George Boole.</p>
+    <p>Booleans are either true or false. Since computers are made from ones and zeroes, which are equivalent to true and false, you'd imagine booleans are pretty important. In Go, to make a variable true, we simply type <code>true</code>, all lowercase. Likewise, we type <code>false</code> for false. Booleans are named after the English mathematician George Boole.</p>
 </section>
 
 <section>
