change the image alt back again

--- a/programming/golang/index.html
+++ b/programming/golang/index.html
@@ -11,7 +11,7 @@ layout: golang
 <section>
     <h2>What is Go?</h2>
     <p>Go is a programming language created at Google in 2009. It is compiled, which means that Go is compiled by the Go compiler to binary ones and zeros that your computer can understand. Go's mascot is a gopher.</p>
-    <img src="/images/programming/golang/go-gopher.jpg" alt="Gopher Mascot">
+    <img src="/images/programming/golang/go-gopher.jpg" alt="Go's mascot, a gopher">
 </section>
 
 <section>
