--- a/programming/golang/more-on-printing.html
+++ b/programming/golang/more-on-printing.html
@@ -19,12 +19,12 @@ layout: golang
 <section>
 	<h2>Usage</h2>
 	<p>There are many ways you can use the Go <code>fmt.Println</code> <i>function</i></p>
-	<p>Firstly, you can simply put your text as a single <b>string</b> inside the function. In short, a string is simply a group of <u>characters</u> <strong>STRUNG</strong> together. In Go, we surround strings with double quotation marks (<code>"</code>) and we also end them with double quotation marks</p>
+	<p>First, you can simply put the text as a string.</p>
 	<p>For example, some examples of doing this are:</p>
-	<code>fmt.Println("My name is Mr. Monkey!")</code><br>
-	<code>fmt.Println("suoguhgo")</code>
+	<code>fmt.Println("Share Learnmonkey with your friends")</code><br>
+	<code>fmt.Println("qwerty")</code>
 	<br><br>
-	<p>We can also use <code>fmt.Println</code> to print a number: an integer or decimal(<i>floating point</i>). To do that, we can write <code>fmt.Println(<i>number</i>)</code>.</p>
+	<p>We can also use <code>fmt.Println</code> to print a number: an integer or decimal(floating point). To do that, we can write <code>fmt.Println(<i>number</i>)</code>.</p>
 	<p>For example, that could look like:</p>
 	<code>fmt.Println(36257265)</code><br>
 	<code>fmt.Println(973.256347)</code>
