make data type names plural

--- a/programming/golang/data-types.html
+++ b/programming/golang/data-types.html
@@ -12,17 +12,17 @@ layout: golang
 </section>
 
 <section>
-    <h2>String</h2>
+    <h2>Strings</h2>
     <p>A string is some text. If that's hard to remember, think of text as characters strung together on a string. In Go, strings are wrapped in double quotes. If we don't do that, Go will think that we are referring to a variable and we'll get an error.</p>
 </section>
 
 <section>
-    <h2>Integer</h2>
+    <h2>Integers</h2>
     <p>An integer is a whole number that can be positive or negative. In Go, we simply write out the number, no quotes or anything like that. To make it negative, just add a dash in front of it. We can do arithmetic with integers.</p>
 </section>
 
 <section>
-    <h2>Boolean</h2>
+    <h2>Booleans</h2>
     <p>Booleans are either true or false. Since computers are made from ones and zeroes, which are equivalent to true and false, you'd imagine booleans are pretty important. In Go, to make a variable true, we simply type <code>true</code>, all lowercase. Likewise, we type <code>false</code> for false. Booleans are named after the English mathematician George Boole.</p>
 </section>
 
