add image to programming main page

--- a/programming/index.html
+++ b/programming/index.html
@@ -19,7 +19,6 @@ layout: default
         <li><a href="/programming/java/">Java</a></li>
         <li><a href="/programming/git/">Git</a></li>
     </ul>
-    
 </section>
 
 <section>
@@ -38,7 +37,8 @@ layout: default
 
 <section>
     <h1>Why Learn Programming?</h1>
-    <p>Programming (at least in our opinion) is quite fun and rewarding. Programming is also a very valuable skill and is quite good for your resume.</p>
+    <p>Programming (at least in our opinion) is quite fun and rewarding. Programming is also a very valuable skill and will be in the future.</p>
+    <img src="/images/programming/coding-future.png" alt="Coding is the future">
 </section>
 
 <section>
