expand programming courses page

--- a/programming/courses/index.html
+++ b/programming/courses/index.html
@@ -4,4 +4,7 @@ permalink: /programming/courses/
 layout: programming-courses
 ---
 <h1>Programming Courses</h1>
-<p>At Learnmonkey, we offer programming courses, find them below.</p>
+<p>At Learnmonkey, we offer programming courses, which guide you step-by-step to mastery. You can find a list of programming courses below: </p>
+<ul>
+    <li><a href="/programming/courses/web-dev/">Web Development</a></li>
+</ul>
