no need for a separate programming course layout

--- a/programming/courses/index.html
+++ b/programming/courses/index.html
@@ -1,7 +1,7 @@
 ---
 title: Programming Courses
 permalink: /programming/courses/
-layout: programming-courses
+layout: default
 ---
 <h1>Programming Courses</h1>
 <p>At Learnmonkey, we offer programming courses, which guide you step-by-step to mastery. You can find a list of programming courses below: </p>
