edit about page

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ layout: default
 
 <section>
     <h2>Donating</h2>
-    <p>Learnmonkey doesn't have ads and will remain without ads. Currently, we do not accept donations, but in the future we will. In the meantime, consider contributing to a local charity.</p>
+    <p>Learnmonkey doesn't have ads and will remain without ads. Currently, we do not accept donations, but in the future we will. In the meantime, consider contributing to a local charity and sharing Learnmonkey with your friends!</p>
 </section>
 
 <section>
