expand about page

--- a/about.html
+++ b/about.html
@@ -7,6 +7,16 @@ layout: default
 <h1>About</h1>
 
 <section>
+    <h2>What is Learnmonkey?</h2>
+    <p>Learnmonkey is a free and open-source website dedicated to making free and high-quality educational content.</p>
+</section>
+
+<section>
+    <h2>Our Mission</h2>
+    <p>At Learnmonkey, our mission is to provide high-quality educational content to anyone with an internet access for free.</p>
+</section>
+
+<section>
     <h2>History</h2>
     <p>Learnmonkey was created in January 2022.</p>
 </section>
