put jekyll back in tutorial index

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -25,7 +25,7 @@ layout: default
             <li><a href="/programming/cpp/">C++</a></li>
             <li><a href="/programming/java/">Java</a></li>
             <li><a href="/programming/git/">Git</a></li>
-<!--             <li><a href="/programming/jekyll/">Jekyll</a></li> -->
+            <li><a href="/programming/jekyll/">Jekyll</a></li>
         </ul>
     </li>
 </ul>
