start go functions page

--- a/programming/golang/functions.html
+++ b/programming/golang/functions.html
@@ -4,3 +4,7 @@ permalink: /programming/golang/functions/
 layout: golang
 ---
 <h1>Go Functions</h1>
+<section>
+    <h2>What is a Function?</h2>
+    <p>A function is similar to a variable, but instead of storing numbers or text, it stores lines of code for Go to run. Functions in Go and other languages can have inputs, or <i>parameters</i>, as we will learn in this tutorial.</p>
+</section>
