go constants expand

--- a/programming/golang/constants.html
+++ b/programming/golang/constants.html
@@ -5,3 +5,13 @@ layout: golang
 ---
 
 <h1>Go Constants</h1>
+
+<section>
+    <h2>What is a Constant?</h2>
+    <p>In Go, constants are variables, but you cannot change them.</p>
+</section>
+
+<section>
+    <h2>Why use Constants?</h2>
+    <p>You might think that constants are incredibly useless and no one should use them, but they are actually incredibly useful. Imagine that you were programming something that would calculate the circumference of a circle and you made a pi variable. If you accidentally change the value of pi, your calculations would be wrong. Instead, you could've made pi into a constant, so when you try to change the value of pi, you get an error.</p>
+</section>
