--- a/programming/golang/constants.html
+++ b/programming/golang/constants.html
@@ -15,3 +15,8 @@ layout: golang
     <h2>Why use Constants?</h2>
     <p>You might think that constants are incredibly useless and no one should use them, but they are actually incredibly useful. Imagine that you were programming something that would calculate the circumference of a circle and you made a pi variable. If you accidentally change the value of pi, your calculations would be wrong. Instead, you could've made pi into a constant, so when you try to change the value of pi, you get an error.</p>
 </section>
+
+<section>
+    <h2>Making a Constant in Go</h2>
+    <p>It's super simple. Instead of doing something like <code>var n int = 3</code> you do <code>const n int = 3</code>. Now, whenenver you do something like <code>n = 4</code>. you get an error.</p>
+</section>
