why use functions go

--- a/programming/golang/functions.html
+++ b/programming/golang/functions.html
@@ -4,7 +4,13 @@ permalink: /programming/golang/functions/
 layout: golang
 ---
 <h1>Go Functions</h1>
+
 <section>
     <h2>What is a Function?</h2>
     <p>A function is similar to a variable, but instead of storing numbers or text, it stores lines of code for Go to run. Functions in Go and other languages can have inputs, or <i>parameters</i>, as we will learn in this tutorial.</p>
+</section>
+
+<section>
+    <h2>Why use Functions?</h2>
+    <p>Let's say that you had some code to find the number of people in a specific country and to that, you would need to write about 10 lines of code. Now, that may not seem like much but actually, if you needed to do it 100 times, you would need 1000 lines of code. Sure, you could copy-paste your code but that seems counter-intuitive in the sense that if you wanted to find the number of people in a different country, you would need to go one-by-one and change everything. Instead, you can use a <b>function</b>. By using a function, it allows you to run as much lines of code as you want by only writing one line of code. You do need to write the code that the function runs but, well, that's <u>MUCH MUCH MUCH</u> better than writing that same code hundreds of times!</p>
 </section>
