--- a/programming/golang/functions.html
+++ b/programming/golang/functions.html
@@ -12,9 +12,5 @@ layout: golang
 
 <section>
     <h2>Why use Functions?</h2>
-    <p>Let's say that you had some code to find the number of people in a specific country and to that, you would need to write about 10 lines of code. Now, that may not seem like much but actually, if you needed to do it 100 times, you would need 1000 lines of code. Sure, you could copy-paste your code but that seems counter-intuitive in the sense that if you wanted to find the number of people in a different country, you would need to go one-by-one and change everything. Instead, you can use a <b>function</b>. By using a function, it allows you to run as much lines of code as you want by only writing one line of code. You do need to write the code that the function runs but, well, that's <u>MUCH MUCH MUCH</u> better than writing that same code hundreds of times!</p>
-</section>
-
-<section>
-    <h2>How do I make a function in Go?</h2>
-</section>
+    <p>Let's say that you wanted to write some code to make buttons on a website an you have to write 5 lines of code to make each button. If you only needed to make 10 buttons. That would be 500 lines of code. Not too bad. But once you need more and more button, the number of lines of code keep growing and growing. If you want to edit all your buttons, you would now have to go through hundreds of lines of code. Instead of getting into this mess, you could make a function to make a button. Now, instead of writing 5 lines of code, you only need to write a single line of code. Plus, changing the button is as simple as changing the code inside the function.</p>
+</section
