add math to tutorials

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -28,7 +28,8 @@ layout: default
             <li><a href="/programming/jekyll/">Jekyll</a></li>
         </ul>
     </li>
-</ul>
+    <li><a href="/math/">Math</a>
+    </li>
 
 <h1>Course Index</h1>
 <ul>
