jekyll is its own thing

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -14,11 +14,7 @@ layout: default
                     <li><a href="/programming/python/pygame/">Pygame</a></li>
                 </ul>
             </li>
-            <li><a href="/programming/html/">HTML</a>
-                <ul>
-                    <li><a href="/programming/jekyll/">Jekyll</a></li>
-                </ul>
-            </li>
+            <li><a href="/programming/html/">HTML</a></li>
             <li><a href="/programming/css/">CSS</a></li>
             <li><a href="/programming/javascript/">JavaScript</a></li>
             <li><a href="/programming/golang/">Go</a></li>
