--- a/programming/golang/functions.html
+++ b/programming/golang/functions.html
@@ -13,4 +13,4 @@ layout: golang
 <section>
     <h2>Why use Functions?</h2>
     <p>Let's say that you wanted to write some code to make buttons on a website an you have to write 5 lines of code to make each button. If you only needed to make 10 buttons. That would be 500 lines of code. Not too bad. But once you need more and more button, the number of lines of code keep growing and growing. If you want to edit all your buttons, you would now have to go through hundreds of lines of code. Instead of getting into this mess, you could make a function to make a button. Now, instead of writing 5 lines of code, you only need to write a single line of code. Plus, changing the button is as simple as changing the code inside the function.</p>
-</section
+</section>
