fmt.print function

--- a/programming/golang/more-on-printing.html
+++ b/programming/golang/more-on-printing.html
@@ -33,3 +33,8 @@ layout: golang
 	<code>fmt.Println("My", "Name", "Is", "Joe")</code>
 	<p>This will tell the <code>fmt.Println</code> function to print each of the strings but sperated with spaces so the end result will be: <samp>My Name Is Joe</samp>.</p>
 </section>
+
+<section>
+	<h2>The <code>fmt.Print</code> Function</h2>
+	<p>In addition to <code>Println</code>, Go also has a <code>Print</code>. The <code>ln</code> in <code>Println</code> actually stands for line, so Go makes a new line after every <code>Println</code> statement. The <code>Print</code> function doesn't make a new line. That's the only difference. You can do everything else the same.</p>
+</section>
