the fmt.Print function has more differences

--- a/programming/golang/more-on-printing.html
+++ b/programming/golang/more-on-printing.html
@@ -36,5 +36,9 @@ layout: golang
 
 <section>
 	<h2>The <code>fmt.Print</code> Function</h2>
-	<p>In addition to <code>Println</code>, Go also has a <code>Print</code>. The <code>ln</code> in <code>Println</code> actually stands for line, so Go makes a new line after every <code>Println</code> statement. The <code>Print</code> function doesn't make a new line. That's the only difference. You can do everything else the same.</p>
+	<p>In addition to <code>Println</code>, Go also has a <code>Print</code>. The <code>ln</code> in <code>Println</code> actually stands for line, so Go makes a new line after every <code>Println</code> statement. The <code>Print</code> function doesn't make a new line. Also, when you do <code>fmt.Print("Hello","World")</code> you get <samp>HelloWorld</samp> instead of <samp>Hello World</samp>. You can do everything else the same.</p>
+</section>
+
+<section>
+	<h2>The <code>fmt.Printf</code> function</h2>
 </section>
