--- a/programming/golang/functions.html
+++ b/programming/golang/functions.html
@@ -16,8 +16,8 @@ layout: golang
 </section>
 
 <section>
-    <h2>How do I make a function in Go?</h2>
-    <p>In Go, it's actually very easy to create function. As a demo, type the following code into your <code>.go</code> file:</p>
+    <h2>Making Functions in Go</h2>
+    <p>In Go, it's actually very easy to create functions. As a demo, type the following code into your <code>.go</code> file:</p>
 <pre>
 package main
 
