--- a/programming/golang/functions.html
+++ b/programming/golang/functions.html
@@ -18,7 +18,7 @@ layout: golang
 <section>
     <h2>Making Functions in Go</h2>
     <p>In Go, it's actually very easy to create functions. As a demo, type the following code into your <code>.go</code> file:</p>
-<pre>
+<pre><code>
 package main
 
 import "fmt"
@@ -30,5 +30,5 @@ func hello(name string) {
 func main() {
   var name = "Coder Monkey"
   hello(name)
-}</pre>
+}</code></pre>
 </section>
