comma not period

--- a/programming/golang/constants.html
+++ b/programming/golang/constants.html
@@ -18,5 +18,5 @@ layout: golang
 
 <section>
     <h2>Making a Constant in Go</h2>
-    <p>It's super simple. Instead of doing something like <code>var n int = 3</code> you do <code>const n int = 3</code>. Now, whenenver you try to do something like <code>n = 4</code>. you get an error.</p>
+    <p>It's super simple. Instead of doing something like <code>var n int = 3</code> you do <code>const n int = 3</code>. Now, whenenver you try to do something like <code>n = 4</code>, you get an error.</p>
 </section>
