start code breakdown section

--- a/programming/golang/functions.html
+++ b/programming/golang/functions.html
@@ -32,3 +32,8 @@ func main() {
     hello(name)
 }</code></pre>
 </section>
+
+<section>
+    <h2>Code Breakdown</h2>
+    <p>Now that you have written the code, we will now break it down and see how it works.</p>
+</section>
