go arithmetic skeleton

--- a/programming/golang/arithmetic.html
+++ b/programming/golang/arithmetic.html
@@ -5,3 +5,27 @@ layout: golang
 ---
 
 <h1>Go Arithmetic</h1>
+
+<section>
+    <h2>Addition</h2>
+</section>
+
+<section>
+    <h2>Subtraction</h2>
+</section>
+
+<section>
+    <h2>Multiplication</h2>
+</section>
+
+<section>
+    <h2>Division</h2>
+</section>
+
+<section>
+    <h2>Modulus</h2>
+</section>
+
+<section>
+    <h2></h2>
+</section>
