--- a/programming/golang/arithmetic.html
+++ b/programming/golang/arithmetic.html
@@ -8,18 +8,22 @@ layout: golang
 
 <section>
     <h2>Addition</h2>
+    <p>To add two numbers, put the plus symbol (<code>+</code>) between them. </p>
 </section>
 
 <section>
     <h2>Subtraction</h2>
+    <p>To add subtract two numbers, put the dash symbol (<code>-</code>) between them. </p>
 </section>
 
 <section>
     <h2>Multiplication</h2>
+    <p>To add multiply two numbers, put an asterisk (<code>*</code>) between them. </p>
 </section>
 
 <section>
     <h2>Division</h2>
+    <p>To add divide two numbers, put a slash (<code>/</code>) between them. </p>
 </section>
 
 <section>
@@ -27,5 +31,9 @@ layout: golang
 </section>
 
 <section>
-    <h2></h2>
+    <h2>Increment</h2>
+</section>
+
+<section>
+    <h2>Decrement</h2>
 </section>
