--- a/programming/golang/arithmetic.html
+++ b/programming/golang/arithmetic.html
@@ -13,17 +13,17 @@ layout: golang
 
 <section>
     <h2>Subtraction</h2>
-    <p>To add subtract two numbers, put the dash symbol (<code>-</code>) between them.</p>
+    <p>To subtract two numbers, put the dash symbol (<code>-</code>) between them.</p>
 </section>
 
 <section>
     <h2>Multiplication</h2>
-    <p>To add multiply two numbers, put an asterisk (<code>*</code>) between them.</p>
+    <p>To multiply two numbers, put an asterisk (<code>*</code>) between them.</p>
 </section>
 
 <section>
     <h2>Division</h2>
-    <p>To add divide two numbers, put a slash (<code>/</code>) between them.</p>
+    <p>To divide two numbers, put a slash (<code>/</code>) between them.</p>
 </section>
 
 <section>
