add to code breakdown

--- a/programming/golang/functions.html
+++ b/programming/golang/functions.html
@@ -36,4 +36,8 @@ func main() {
 <section>
     <h2>Code Breakdown</h2>
     <p>Now that you have written the code, we will now break it down and see how it works.</p>
+    <p>Well, the only <u>NEW</u> code we wrote was:</p>
+<pre><code>func hello(name string) {
+    fmt.Println("Hello " + name)
+}</code></pre>
 </section>
