--- a/programming/python/arithmetic.html
+++ b/programming/python/arithmetic.html
@@ -23,7 +23,7 @@ permalink: /programming/python/arithmetic/
 
 <section>
     <h2>Division</h2>
-    <p>Adding in Python is very simple. To add numbers, we just put a plus (<code>+</code>) in between them.</p>
+    <p>Adding in Python is very simple. To add numbers, we just put a slash (<code>/</code>) in between them.</p>
 </section>
 
 <section>
