go arithmetic expand

--- a/programming/golang/arithmetic.html
+++ b/programming/golang/arithmetic.html
@@ -27,13 +27,16 @@ layout: golang
 </section>
 
 <section>
-    <h2>Modulus</h2>
+    <h2>Getting the Remainder</h2>
+    <p>To get the remainder when we divide two numbers, put a percent sign (<code>%/code>) between them. In programming lingo, this is called the modulus operator.</p>
 </section>
 
 <section>
     <h2>Increment</h2>
+    <p>To add one to a number, put two plus signs (<code>++</code>) after it. For example, <code>n++</code>.</p>
 </section>
 
 <section>
     <h2>Decrement</h2>
+    <p>To subtract one from a number, put two dashes (<code>--</code>) after it. For example, <code>n--</code>.</p>
 </section>
