what are comments

--- a/programming/golang/comments.html
+++ b/programming/golang/comments.html
@@ -3,4 +3,10 @@ title: Go Comments
 permalink: /programming/golang/comments/
 layout: golang
 ---
+
 <h1>Go Comments</h1>
+
+<section>
+    <h2>What are Comments?</h2>
+    <p>When we are writing our code, we often want to make comments or notes about our code. This is what comments are for. We make Go ignore some lines of our code using comments. We can also use comments for remove old code, but not completely removing it. With comments, you can do whatever you want.</p>
+</section>
