finish go function code breakdown

--- a/programming/golang/functions.html
+++ b/programming/golang/functions.html
@@ -40,4 +40,8 @@ func main() {
 <pre><code>func hello(name string) {
     fmt.Println("Hello " + name)
 }</code></pre>
+    <p>On the first line, we have <pre><code>func hello(name string) {</code></pre>. This is called <i>declaring</i> a function, much like a variable. We type <code>func</code> to tell Go that our code is a function and we name it <code>hello</code>. Then, we write <code>name string</code> in the brackets. Basically, this is an <i>argument</i>, also known as a <i>parameter</i>. This is used to pass information and variables to our function. We can even pass in other functions! Writing <code>string</code> means that the <code>name</code> argument <strong><u>MUST</u></strong> be a string Data Type. After, we write the curly bracket (<code>{</code>) to tell Go that the next lines of code, before the closing curly bracket (<code>}</code>), to be the code that runs when we call our <code>hello</code> function.</p>
+    <p>On the next line, we have <code>fmt.Println("Hello " + name)</code>. We already know that <code>fmt.Println</code> prints text, but what is the <code>+</code> doing between <code>"Hello "</code> and the variable <code>name</code>? Well, in programming, we call this <i>String Concatenation</i>, or simply just combinging two strings together. In this case, we put <code>"Hello "</code> before the variable <code>name</code> so the final result will be <code>Hello &#60;name&#62;</code>. Then, the function will print that out.</p>
+    <p>Finally, we close of with the closing curly bracket (<code>}</code>) which tells Go to end our function.</p>
+
 </section>
