--- a/programming/golang/comments.html
+++ b/programming/golang/comments.html
@@ -10,3 +10,14 @@ layout: golang
     <h2>What are Comments?</h2>
     <p>When we are writing our code, we often want to make comments or notes about our code. This is what comments are for. We make Go ignore some lines of our code using comments. We can also use comments for remove old code, but not completely removing it. With comments, you can do whatever you want.</p>
 </section>
+
+<section>
+    <h2>Making Comments In Go</h2>
+    <p>In Go, it actually VERY easy to make comments!! To do that, simply write <code>// </code> in front of the text you want to "comment out" (programming talk for making a text a comment). For example, we could have:</p>
+    <code>// hi</code><br>
+    <p>We can also make multi-line comments in Go by putting <code>/*</code> in front of the first line of the comment and then putting <code>*/</code> at the end of the multi-line comment. For example, we could have:</p>
+    <pre><code>/* Some Text Here
+More Text
+Share Learnmonkey With Your Friends!!
+Go Is Great! */</code></pre>
+</section>
