expand demo comment

--- a/programming/golang/comments.html
+++ b/programming/golang/comments.html
@@ -14,7 +14,9 @@ layout: golang
 <section>
     <h2>Making Comments In Go</h2>
     <p>In Go, it actually VERY easy to make comments!! To do that, simply write <code>// </code> in front of the text you want to "comment out" (programming talk for making a text a comment). For example, we could have:</p>
-    <code>// hi</code><br>
+    <pre><code>// hi
+// there
+// Learnmonkey!</code></pre><br>
     <p>We can also make multi-line comments in Go by putting <code>/*</code> in front of the first line of the comment and then putting <code>*/</code> at the end of the multi-line comment. For example, we could have:</p>
     <pre><code>/* Some Text Here
 More Text
