--- a/programming/golang/comments.html
+++ b/programming/golang/comments.html
@@ -17,6 +17,8 @@ layout: golang
     <pre><code>// hi
 // there
 // Learnmonkey!</code></pre><br>
+    <p>Single-line comments can also go at the end of code like this:</p>
+    <pre><code>fmt.Println("Learnmonkey is awesome!") // It's true!</code></pre><br>
     <p>We can also make multi-line comments in Go by putting <code>/*</code> in front of the first line of the comment and then putting <code>*/</code> at the end of the multi-line comment. For example, we could have:</p>
     <pre><code>/* Some Text Here
 More Text
