running a function in go

--- a/programming/golang/functions.html
+++ b/programming/golang/functions.html
@@ -45,3 +45,8 @@ func main() {
     <p>Finally, we close of with the closing curly bracket (<code>}</code>) which tells Go to end our function.</p>
 
 </section>
+
+<section>
+    <h2>Running A Function</h2>
+    <p>To run a function in Go, we just write <code>functionname()</code> and any <i>parameters/arguments</i> the function takes in the brackets. For example, to run our <code>hello</code> function, we can write <code>hello("Monkey Coder")</code> and the program will output <samp>Hello Monkey Coder</samp>
+</section>
