typo fix... whaaaa

--- a/programming/golang/arithmetic.html
+++ b/programming/golang/arithmetic.html
@@ -28,7 +28,7 @@ layout: golang
 
 <section>
     <h2>Getting the Remainder</h2>
-    <p>To get the remainder when we divide two numbers, put a percent sign (<code>%/code>) between them. In programming lingo, this is called the modulus operator.</p>
+    <p>To get the remainder when we divide two numbers, put a percent sign (<code>%</code>) between them. In programming lingo, this is called the modulus operator.</p>
 </section>
 
 <section>
