--- a/programming/golang/if-else.html
+++ b/programming/golang/if-else.html
@@ -5,3 +5,14 @@ layout: golang
 ---
 
 <h1>Go If and Else</h1>
+
+<section>
+    <h2>If Statements</h2>
+    <p>If statements are when we want to execute some lines of code only when a specific condition is met. Below is the basic structure of a Go if statement:</p>
+    <pre><code>
+if [condition] {
+    // do something
+}
+    </code></pre>
+    <p>We replace <code>[condition]</code> with the condition we want to test. Then, inside the curly brackets, we put our code. The code is only run if the condition is met.</p>
+</section>
