--- a/programming/golang/more-on-printing.html
+++ b/programming/golang/more-on-printing.html
@@ -13,7 +13,7 @@ layout: golang
 
 <section>
 	<h2>How can I print text in Go?</h2>
-	<p>We already know that we can simply write <code>fmt.Println(<i>text</i>)</code> to print stuff in Go. We can change text to be any <a href="/programming/golang/data-types/">Data Type</a> we want (to learn more about Data Types, click the link to see our Data Types tutorial)!</p>
+	<p>We already know that we can simply write <code class="language-go">fmt.Println(<i>text</i>)</code> to print stuff in Go. We can change text to be any <a href="/programming/golang/data-types/">Data Type</a> we want (to learn more about Data Types, click the link to see our Data Types tutorial)!</p>
 </section>
 
 <section>
@@ -21,22 +21,22 @@ layout: golang
 	<p>There are many ways you can use the Go <code>fmt.Println</code> <i>function</i></p>
 	<p>First, you can simply put the text as a string.</p>
 	<p>For example, some examples of doing this are:</p>
-	<code>fmt.Println("Share Learnmonkey with your friends")</code><br>
-	<code>fmt.Println("qwerty")</code>
+	<code class="language-go">fmt.Println("Share Learnmonkey with your friends")</code><br>
+	<code class="language-go">fmt.Println("qwerty")</code>
 	<br><br>
 	<p>We can also use <code>fmt.Println</code> to print a number: an integer or decimal(floating point). To do that, we can write <code>fmt.Println(<i>number</i>)</code>.</p>
 	<p>For example, that could look like:</p>
-	<code>fmt.Println(36257265)</code><br>
-	<code>fmt.Println(973.256347)</code>
+	<code class="language-go">fmt.Println(36257265)</code><br>
+	<code class="language-go">fmt.Println(973.256347)</code>
 	<br><br>
 	<p>Finally, we can place different Data Types in the function, seperated with commas like this:</p>
-	<code>fmt.Println("My", "Name", "Is", "Joe")</code>
+	<code class="language-go">fmt.Println("My", "Name", "Is", "Joe")</code>
 	<p>This will tell the <code>fmt.Println</code> function to print each of the strings but sperated with spaces so the end result will be: <samp>My Name Is Joe</samp>.</p>
 </section>
 
 <section>
 	<h2>The <code>fmt.Print</code> Function</h2>
-	<p>In addition to <code>Println</code>, Go also has a <code>Print</code>. The <code>ln</code> in <code>Println</code> actually stands for line, so Go makes a new line after every <code>Println</code> statement. The <code>Print</code> function doesn't make a new line. Also, when you do <code>fmt.Print("Hello","World")</code> you get <samp>HelloWorld</samp> instead of <samp>Hello World</samp>. You can do everything else the same.</p>
+	<p>In addition to <code>Println</code>, Go also has a <code>Print</code>. The <code>ln</code> in <code>Println</code> actually stands for line, so Go makes a new line after every <code>Println</code> statement. The <code>Print</code> function doesn't make a new line. Also, when you do <code class="language-go">fmt.Print("Hello","World")</code> you get <samp>HelloWorld</samp> instead of <samp>Hello World</samp>. You can do everything else the same.</p>
 </section>
 
 <section>
