--- a/programming/golang/your-first-go-program.html
+++ b/programming/golang/your-first-go-program.html
@@ -8,7 +8,7 @@ layout: golang
 <section>
     <h2>Writing the Code</h2>
     <p>Now, it's time to get our hands dirty and write some actual code. Below is the code we're going to write: </p>
-    <pre><code>
+    <pre><code class="language-go">
 package main
 
 import "fmt"
