--- a/programming/golang/comments.html
+++ b/programming/golang/comments.html
@@ -14,13 +14,13 @@ layout: golang
 <section>
     <h2>Making Comments In Go</h2>
     <p>In Go, it actually VERY easy to make comments!! To do that, simply write <code>// </code> in front of the text you want to "comment out" (programming talk for making a text a comment). For example, we could have:</p>
-    <pre><code>// hi
+    <pre><code class="language-go">// hi
 // there
 // Learnmonkey!</code></pre><br>
     <p>Single-line comments can also go at the end of code like this:</p>
     <pre><code>fmt.Println("Learnmonkey is awesome!") // It's true!</code></pre><br>
     <p>We can also make multi-line comments in Go by putting <code>/*</code> in front of the first line of the comment and then putting <code>*/</code> at the end of the multi-line comment. For example, we could have:</p>
-    <pre><code>/* Some Text Here
+    <pre><code class="language-go">/* Some Text Here
 More Text
 Share Learnmonkey With Your Friends!!
 Go Is Great! */</code></pre>
