--- a/programming/golang/if-else.html
+++ b/programming/golang/if-else.html
@@ -9,7 +9,7 @@ layout: golang
 <section>
     <h2>If Statements</h2>
     <p>If statements are when we want to execute some lines of code only when a specific condition is met. Below is the basic structure of a Go if statement:</p>
-    <pre><code>
+    <pre><code class="language-go">
 if [condition] {
     // do something
 }
