add else statement

--- a/programming/golang/if-else.html
+++ b/programming/golang/if-else.html
@@ -11,8 +11,20 @@ layout: golang
     <p>If statements are when we want to execute some lines of code only when a specific condition is met. Below is the basic structure of a Go if statement:</p>
     <pre><code class="language-go">
 if [condition] {
-    // do something
+    // do something if the condition is met
 }
     </code></pre>
     <p>We replace <code>[condition]</code> with the condition we want to test. Then, inside the curly brackets, we put our code. The code is only run if the condition is met.</p>
+</section>
+
+<section>
+    <h2>Else Statements</h2>
+    <p>Sometimes, we want something to happen when a condition is met, but something else to happen if the condition is not met. To do this, we can use else statements. Below is the syntax of the if and else statement: </p>
+    <pre><code>
+if [condition] {
+    // do something if the condition is met
+} else {
+    // do something if the condition is not met
+}
+    </code></pre>
 </section>
