--- a/programming/golang/operators/comparison.html
+++ b/programming/golang/operators/comparison.html
@@ -4,4 +4,4 @@ permalink: /programming/golang/operators/comparison/
 layout: golang
 ---
 
-<h1>Go Go Comparison Operators</h1>
+<h1>Go Comparison Operators</h1>
