put arithmetic stuff in arithmetic operators page

--- a/programming/golang/operators/arithmetic.html
+++ b/programming/golang/operators/arithmetic.html
@@ -5,3 +5,38 @@ layout: golang
 ---
 
 <h1>Go Arithmetic Operators</h1>
+
+<section>
+    <h2>Addition</h2>
+    <p>To add two numbers, put the plus symbol (<code>+</code>) between them.</p>
+</section>
+
+<section>
+    <h2>Subtraction</h2>
+    <p>To subtract two numbers, put the dash symbol (<code>-</code>) between them.</p>
+</section>
+
+<section>
+    <h2>Multiplication</h2>
+    <p>To multiply two numbers, put an asterisk (<code>*</code>) between them.</p>
+</section>
+
+<section>
+    <h2>Division</h2>
+    <p>To divide two numbers, put a slash (<code>/</code>) between them.</p>
+</section>
+
+<section>
+    <h2>Getting the Remainder</h2>
+    <p>To get the remainder when we divide two numbers, put a percent sign (<code>%</code>) between them. In programming lingo, this is called the modulus operator.</p>
+</section>
+
+<section>
+    <h2>Increment</h2>
+    <p>To add one to a number, put two plus signs (<code>++</code>) after it. For example, <code>n++</code>.</p>
+</section>
+
+<section>
+    <h2>Decrement</h2>
+    <p>To subtract one from a number, put two dashes (<code>--</code>) after it. For example, <code>n--</code>.</p>
+</section>
