go operators page

--- a/programming/golang/operators/index.html
+++ b/programming/golang/operators/index.html
@@ -8,4 +8,33 @@ layout: golang
 
 <section>
     <h2>What are Operators?</h2>
+    <p>Operators are used to perform operations on variables and values. For example, the <code>+</code> operators adds together numbers: </p>
+    <pre><code class="language-go">
+package main
+import "fmt"
+
+func main () {
+    var a = 15
+    var b = 5
+    fmt.Println(a + b)
+    fmt.Println(5 + 6)
+}
+    </code></pre>
+    <p>The output of the code is: </p>
+    <pre><samp>
+20
+11
+    </samp></pre>
+</section>
+
+<section>
+    <h2>Types of Operators</h2>
+    <p>Go divides operators into the following types: </p>
+    <ul>
+        <li><a href="/programming/golang/operators/arithmetic/">Arithmetic Operators</a></li>
+        <li><a href="/programming/golang/operators/assignment/">Assignment Operators</a></li>
+        <li><a href="/programming/golang/operators/bitwise/">Bitwise Operators</a></li>
+        <li><a href="/programming/golang/operators/comparison/">Comparison Operators</a></li>
+        <li><a href="/programming/golang/operators/logical/">Logical Operators</a></li>
+    </ul>
 </section>
